[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pipes.gd" type="Script" id=1]
[ext_resource path="res://pipe.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14.9842, 175.743 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.4149, 56.9691 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 15.605, 235.991 )

[node name="Pipes" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Top" type="Area2D" parent="." index="0"]

position = Vector2( 0, 25.05 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Linear", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Top" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top" index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PointArea" type="Area2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 0, 272 )
scale = Vector2( 1, 1.15625 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointArea" index="0"]

position = Vector2( 0, -2.59459 )
shape = SubResource( 2 )

[node name="Bottom" type="Area2D" parent="." index="2"]

position = Vector2( 0, 337 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Angular", "Applied Forces", "Linear", "Material", "Pause", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Bottom" index="0"]

position = Vector2( 0, 236.287 )
scale = Vector2( 1, 1.34305 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bottom" index="1"]

position = Vector2( 0, 235.717 )
shape = SubResource( 3 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility" ]

[connection signal="body_entered" from="Top" to="." method="_on_pipe_body_entered"]

[connection signal="body_entered" from="PointArea" to="." method="_on_PointArea_body_entered"]

[connection signal="body_entered" from="Bottom" to="." method="_on_pipe_body_entered"]


